2nd version. copy/paste from monica AI

--- a/index.html
+++ b/index.html
@@ -1,47 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Dr. Your Name - Physician and Anesthesiologist</title>
+    <title>Dr. [Your Name] - Anesthesiologist & Coach</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Dr. Your Name</h1>
+        <h1>Dr. [Your Name]</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#blog">Blog</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
+        <section id="hero">
+            <h2>Anesthesiologist & Coach</h2>
+            <p>Welcome to my website! I specialize in using NLP techniques to help patients manage pain and anxiety before, during, and after surgery. I also offer coaching services to help individuals achieve their personal and professional goals.</p>
+            <a href="#services" class="cta">Learn More</a>
+        </section>
+
         <section id="about">
             <h2>About Me</h2>
-            <p>I am a physician and anesthesiologist with a focus on consultation, hypnotism, coaching, and NLP (neuro-linguistic programming). I am passionate about helping individuals achieve their goals and improve their well-being.</p>
+            <p>[Insert brief bio here]</p>
+            <a href="#services" class="cta">Learn More</a>
         </section>
+
         <section id="services">
-            <h2>Services</h2>
-            <ul>
-                <li>Consultation for medical conditions</li>
-                <li>Hypnotism for behavior modification and stress reduction</li>
-                <li>Coaching for personal development and goal achievement</li>
-                <li>NLP techniques for effective communication and mindset transformation</li>
-            </ul>
+            <h2>Coaching Services</h2>
+            <p>[Insert details about coaching services here]</p>
+            <a href="#contact" class="cta">Get Started</a>
         </section>
+
+        <section id="publications">
+            <h2>Publications</h2>
+            <p>[Insert links to publications here]</p>
+            <a href="#contact" class="cta">Contact Me</a>
+        </section>
+
+        <section id="blog">
+            <h2>Latest Blog Posts</h2>
+            <ul>
+                <li><a href="[Insert link to blog post 1]">[Insert title of blog post 1]</a></li>
+                <li><a href="[Insert link to blog post 2]">[Insert title of blog post 2]</a></li>
+                <li><a href="[Insert link to blog post 3]">[Insert title of blog post 3]</a></li>
+            </ul>
+            <a href="[Insert link to blog]" class="cta">Read More</a>
+        </section>
+
         <section id="contact">
             <h2>Contact Me</h2>
-            <p>If you have any questions or would like to schedule a consultation, please feel free to reach out to me:</p>
-            <ul>
-                <li>Email: [your email address]</li>
-                <li>Phone: [your phone number]</li>
-            </ul>
+            <form action="[Insert link to contact form]" method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+
+                <input type="submit" value="Send Message">
+            </form>
         </section>
     </main>
+
     <footer>
-        <p>&copy; 2023 Dr. Your Name</p>
+        <p>&copy; 2023 Dr. [Your Name]. All rights reserved.</p>
+        <p>Designed by [Your Name].</p>
     </footer>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
