--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			text-align: right;
 			font-family: 'b nazanin';
 		}
+
 		/* div{
 			outline: 1px solid red;
 		} */
@@ -47,25 +48,26 @@
 </head>
 
 <body>
-	<header>
-		<div class="container header">
-			<div class="row mt-3">
-				<div class="col push-left">
-					<a class=" navbar-brand" href="#">
-						<img src="./images/dr vahideh-sadat hosseini.jpg" alt="Logo" class="logo">
-					</a>
-				</div>
-				<div class="col-10">
-					<h1 class="mb-2">همراهی در مسیر آگاهی</h1>
-					<h3 class="mb-1 text-center">دکتر وحیده سادات حسینی</h3>
-					<h4 class="text-center">پزشک و متخصص بیهوشی ومراقبتهای ویژه</h4>
-					<h5 class="text-left">کوچ و متخصص NLP </h5>
-					<h6 class="text-left">همراه شما در مسیر موفقیت و آگاهی</h6>
+	<div class="container">
+
+		<header>
+			<div class="header">
+				<div class="row mt-3">
+					<div class="col push-left">
+						<a class=" navbar-brand" href="#">
+							<img src="./images/dr vahideh-sadat hosseini.jpg" alt="Logo" class="logo">
+						</a>
+					</div>
+					<div class="col-10">
+						<h1 class="mb-2">همراهی در مسیر آگاهی</h1>
+						<h3 class="mb-1 text-center">دکتر وحیده سادات حسینی</h3>
+						<h4 class="text-center">پزشک و متخصص بیهوشی ومراقبتهای ویژه</h4>
+						<h5 class="text-left">کوچ و متخصص NLP </h5>
+						<h6 class="text-left">همراه شما در مسیر موفقیت و آگاهی</h6>
+					</div>
 				</div>
 			</div>
-		</div>
-		<nav class="navbar navbar-expand-md navbar-light bg-light">
-			<div class="container">
+			<nav class="navbar navbar-expand-md navbar-light bg-light">
 				<div class="row">
 
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -95,30 +97,26 @@
 						</ul>
 					</div>
 				</div>
-			</div>
-		</nav>
-	</header>
+			</nav>
+		</header>
 
-	<main class="container">
-		<section id="hero">
-			<h2>Anesthesiologist & Coach</h2>
-			<p>Welcome to my website! I specialize in using NLP techniques to help patients and provide coaching
-				services to help individuals achieve their goals.</p>
-			<button id="btn-coaching">Learn More</button>
-			<button id="btn-contact">Contact Me</button>
-		</section>
+		<main class="container">
+			<section>
+				<h2>Welcome</h2>
+			</section>
 
-		<!-- Rest of your content goes here -->
+			<!-- Rest of your content goes here -->
 
-	</main>
+		</main>
 
-	<footer class="footer">
-		<a href="https://www.instagram.com/drvahidehhosseini/"><i class="fab fa-instagram fa-lg"></i></a>
-		<a href="mailto:youremail@example.com"><i class="far fa-envelope fa-lg"></i></a>
+		<footer class="footer">
+			<a href="https://www.instagram.com/drvahidehhosseini/"><i class="fab fa-instagram fa-lg"></i></a>
+			<a href="mailto:youremail@example.com"><i class="far fa-envelope fa-lg"></i></a>
 
-		<!-- Add more social media links here -->
+			<!-- Add more social media links here -->
 
-	</footer>
+		</footer>
+	</div>
 
 	<script src="./js/jquery-3.5.1.slim.min.js"></script>
 	<script src="./js/popper.min.js"></script>
