--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 					<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 						<ul class="navbar-nav">
 							<li class="nav-item">
-								<a class="nav-link" href="about.html">درباره من</a>
+								<a class="nav-link" href="#about">درباره من</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#services">خدمات</a>
@@ -102,7 +102,7 @@
 
 		<main class="container">
 			<section>
-				<h2>Welcome</h2>
+				<h2>درباره من</h2>
 			</section>
 
 			<!-- Rest of your content goes here -->
